--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,17 +14,17 @@ jobs:
       # Build
       - name: Build the file
         run: |
-          cd /home/runner/work/boilerplate-card/boilerplate-card
+          cd /home/runner/work/obvious-thermostat/obvious-thermostat
           npm install
           npm run build
 
-      # Upload build file to the releas as an asset.
+      # Upload build file to the release as an asset.
       - name: Upload zip to release
         uses: svenstaro/upload-release-action@v1-release
 
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: /home/runner/work/boilerplate-card/boilerplate-card/dist/boilerplate-card.js
-          asset_name: boilerplate-card.js
+          file: /home/runner/work/obvious-thermostat/obvious-thermostat/dist/obvious-thermostat.js
+          asset_name: obvious-thermostat.js
           tag: ${{ github.ref }}
           overwrite: true
