--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       # Build
       - name: Build the file
         run: |
-          cd /home/runner/work/obvious-thermostat/obvious-thermostat
+          cd /home/runner/work/minimalist-thermostat/minimalist-thermostat
           npm install
           npm run build
 
@@ -24,7 +24,7 @@ jobs:
 
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: /home/runner/work/obvious-thermostat/obvious-thermostat/dist/obvious-thermostat.js
-          asset_name: obvious-thermostat.js
+          file: /home/runner/work/minimalist-thermostat/minimalist-thermostat/dist/minimalist-thermostat.js
+          asset_name: minimalist-thermostat.js
           tag: ${{ github.ref }}
           overwrite: true
